tests/testfiles/validated/invalid_programs/607_invalid_declaration_multiple_characters.c
int main()
{
    int a bcd;
    return 42;
}